# RAG-Chatbot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
rag-chatbot/: definitions.py  doc_reader.py  main.py  note_engine.py  prompts.py
rag-chatbot/data/: UK.docx  population.csv
rag-chatbot/varied_data/: Jane.md  Jannice.docx  John.txt
